--- a/index.html
+++ b/index.html
@@ -3,302 +3,141 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Amirrul Mukminin | Digital Services</title>
+  <title>Amirrul Mukminin | Portfolio</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;700&display=swap');
-    @font-face {
-      font-family: 'Tek Tall Arabic';
-      src: url('https://fonts.cdnfonts.com/s/18332/TekTallArabic.woff') format('woff');
-    }
-
-    :root {
-      --light-bg: #fef9f2;
-      --dark-bg: #0e1a2b;
-      --light-text: #1a1a1a;
-      --dark-text: #fdfdfd;
-      --highlight-color: #5f5fff;
-    }
-
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
 
     body {
-      font-family: 'SF Pro Display', sans-serif;
-      background-color: var(--light-bg);
-      color: var(--light-text);
-      transition: background-color 0.5s, color 0.5s;
-    }
-
-    body.dark-mode {
-      background-color: var(--dark-bg);
-      color: var(--dark-text);
-    }
-
-    .section {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: row;
-      padding: 80px 40px 40px;
-      min-height: 100vh;
-      gap: 60px;
-    }
-
-    .text-container {
-      flex: 1;
-      text-align: left;
-      animation: fadeIn 2s ease-out forwards;
-    }
-
-    h1 {
-      font-family: 'Tek Tall Arabic', sans-serif;
-      font-size: 4rem;
-      margin-bottom: 20px;
-      color: var(--highlight-color);
-      letter-spacing: 0.01rem;
-      animation: fadeInSmooth 2s ease-out forwards;
-    }
-
-    .description {
-      font-size: 1.1rem;
-      max-width: 550px;
+      font-family: Arial, sans-serif;
+      background-color: #fefefe;
+      color: #111;
       line-height: 1.6;
-      animation: fadeIn 2.2s ease forwards;
-    }
-
-    .mode-toggle {
-      font-size: 1.5rem;
-      border: none;
-      background: white;
-      border-radius: 50%;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-      cursor: pointer;
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      width: 50px;
-      height: 50px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: transform 0.2s ease-in-out;
-      z-index: 1000;
-    }
-
-    .mode-toggle:hover {
-      transform: scale(1.1);
-    }
-
-    .info-section {
-      padding: 60px 20px;
       display: flex;
       flex-direction: column;
-      gap: 30px;
-      align-items: center;
+      min-height: 100vh;
     }
 
-    .info-block {
-      max-width: 1000px;
+    header {
+      background-color: #0e1a2b;
+      color: white;
+      padding: 1rem 2rem;
       display: flex;
       justify-content: space-between;
+      align-items: center;
       flex-wrap: wrap;
-      gap: 20px;
-      align-items: flex-start;
-      width: 100%;
     }
 
-    .info-block-left {
-      flex: 1;
-      font-size: 1.2rem;
-      line-height: 1.6;
-      text-align: left;
+    header h1 {
+      font-size: 1.5rem;
     }
 
-    .info-boxes {
+    nav {
       display: flex;
-      flex-wrap: wrap;
+      gap: 1rem;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .hero {
+      position: relative;
+      display: flex;
+      flex-direction: column;
       justify-content: center;
-      gap: 15px;
+      align-items: center;
+      text-align: center;
+      padding: 6rem 2rem;
+      min-height: 80vh;
+      background-image: url('Background.webp');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+
+    .hero::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
-      margin-top: 10px;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.4);
+      z-index: 1;
     }
 
-    .info-box {
-      background: #fff;
-      padding: 14px 16px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      font-size: 0.9rem;
-      text-align: center;
-      min-width: 120px;
+    .hero-text {
+      position: relative;
+      z-index: 2;
+      max-width: 600px;
+      color: white;
     }
 
-    .info-box:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 10px 22px rgba(0, 0, 0, 0.15);
-    }
-
-    .dark-mode .info-box {
-      background: #1b1b1b;
-      color: #fff;
-    }
-
-    .service-section,
-    .portfolio-section,
-    .testimonials-section {
-      padding: 60px 20px 100px;
-      text-align: center;
-    }
-
-    .service-section h2,
-    .portfolio-section h2,
-    .testimonials-section h2 {
+    .hero h2 {
       font-size: 2rem;
-      margin-bottom: 30px;
+      margin-bottom: 1rem;
     }
 
-    .services,
-    .projects,
-    .testimonials {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 30px;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-
-    .service,
-    .project,
-    .testimonial {
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      font-size: 1rem;
-      width: 280px;
-      text-align: left;
-    }
-
-    .dark-mode .service,
-    .dark-mode .project,
-    .dark-mode .testimonial {
-      background: #1b1b1b;
-      color: #fff;
-    }
-
-    .service:hover,
-    .project:hover,
-    .testimonial:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
+    .hero p {
+      font-size: 1.1rem;
     }
 
     footer {
-      padding: 30px;
+      margin-top: auto;
       text-align: center;
-      font-size: 0.95rem;
-      color: #999;
+      padding: 1rem;
+      background-color: #f7f2eb;
+      color: #888;
+      font-size: 0.9rem;
     }
 
-    @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(20px); }
-      100% { opacity: 1; transform: translateY(0); }
+    @media (min-width: 768px) {
+      .hero {
+        flex-direction: row;
+        justify-content: space-around;
+        text-align: left;
+      }
+
+      .hero-text {
+        max-width: 500px;
+      }
     }
 
-    @keyframes fadeInSmooth {
-      0% { opacity: 0; transform: translateY(10px); }
-      100% { opacity: 1; transform: translateY(0); }
+    @media (max-width: 480px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      nav {
+        flex-direction: column;
+        gap: 0.5rem;
+      }
     }
   </style>
 </head>
 <body>
-  <button class="mode-toggle" onclick="toggleMode()" id="modeButton">🌙</button>
 
-  <section class="section">
-    <div class="text-container">
-      <h1>AMIRRUL MUKMININ</h1>
-      <p class="description">HTML/CSS Web Development | Typing Services | Canva Design | Data Entry & PDF Conversion</p>
-    </div>
-  </section>
+  <header>
+    <h1>Amirrul Mukminin</h1>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Portfolio</a>
+      <a href="#">Services</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
 
-  <section class="info-section">
-    <div class="info-block">
-      <div class="info-block-left">
-        <h2>About Me</h2>
-        <p>Hi! I'm Amirrul, a freelance web developer from Malaysia 🇲🇾. I enjoy building clean, responsive websites and helping clients with fast, reliable support.</p>
-      </div>
-    </div>
-    <div class="info-block">
-      <div class="info-block-left">
-        <h2>Education</h2>
-      </div>
-    </div>
-    <div class="info-boxes">
-      <div class="info-box">
-        <h3>🎓 Bachelor Degree</h3>
-        <p>Bachelor of Computer Science (Hons.) in Multimedia Computing – UiTM (2022–2025)</p>
-      </div>
-      <div class="info-box">
-        <h3>📘 Matriculation</h3>
-        <p>Pahang Matriculation College – Computer Science (2020–2022)</p>
-      </div>
-    </div>
-    <div class="info-block">
-      <div class="info-block-left">
-        <h2>My Skills</h2>
-        <p>HTML, CSS, Web Design, Web Development, Data Entry, Typing, Microsoft Word, Microsoft Excel, Canva, Photo Editing, Video Editing, Writing, Python, C++</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="service-section">
-    <h2>What Can I Help You With?</h2>
-    <div class="services">
-      <div class="service">🔧 <strong>HTML/CSS Web Development</strong><br />Building modern, responsive websites using clean HTML & CSS that look great on all screen sizes.</div>
-      <div class="service">⌨️ <strong>Typing Services</strong><br />Accurate and efficient typing at 50+ WPM for retyping, transcription, and form filling projects.</div>
-      <div class="service">🎨 <strong>Canva Design</strong><br />Professional and creative visual content like posters, resumes, and presentations using Canva Pro.</div>
-      <div class="service">📊 <strong>Data Entry</strong><br />Structured entry of data from various sources into Excel/Google Sheets with 100% accuracy and formatting.</div>
-      <div class="service">📑 <strong>PDF Conversion</strong><br />Seamless conversion between PDF and Word/Excel while preserving formatting and layout design.</div>
-    </div>
-  </section>
-
-  <section class="portfolio-section">
-    <h2>My Work</h2>
-    <div class="projects">
-      <div class="project">
-        <strong>Personal Portfolio Website</strong><br />
-        Built using HTML & CSS. Fully responsive and deployed via GitHub Pages.<br />
-        🔗 <a href="https://miyonotmeor.github.io/portfolio-website/" target="_blank">View Live</a>
-      </div>
-      <div class="project">
-        <strong>Canva Resume Design</strong><br />
-        Designed clean and modern resume templates for job seekers using Canva Pro.
-      </div>
-      <div class="project">
-        <strong>PDF to Excel Data Conversion</strong><br />
-        Manual data entry project involving tabular data from PDFs converted to Excel format.
-      </div>
-    </div>
-  </section>
-
-  <section class="testimonials-section">
-    <h2>Client Testimonials</h2>
-    <div class="testimonials">
-      <div class="testimonial">
-        ⭐️⭐️⭐️⭐️⭐️<br />“Amirrul delivered the project exactly as described. Fast and reliable!”<br /><em>– Sarah L., Business Owner</em>
-      </div>
-      <div class="testimonial">
-        ⭐️⭐️⭐️⭐️⭐️<br />“Excellent work with my HTML/CSS website. Very clean and professional!”<br /><em>– James K., Startup Founder</em>
-      </div>
-      <div class="testimonial">
-        ⭐️⭐️⭐️⭐️⭐️<br />“Great communication and quick turnaround. Highly recommended!”<br /><em>– Aina Z., Canva Design Client</em>
-      </div>
+  <section class="hero">
+    <div class="hero-text">
+      <h2>Hi, I’m Amirrul 👋</h2>
+      <p>I’m a web developer & designer who creates responsive websites that work beautifully across all devices — phone, tablet, or desktop. Let's build something amazing together.</p>
     </div>
   </section>
 
@@ -306,14 +145,5 @@
     Copyright © 2025 Amirrul Mukminin
   </footer>
 
-  <script>
-    function toggleMode() {
-      const body = document.body;
-      const button = document.getElementById('modeButton');
-      body.classList.toggle('dark-mode');
-      const isDark = body.classList.contains('dark-mode');
-      button.textContent = isDark ? '☀️' : '🌙';
-    }
-  </script>
 </body>
 </html>
