--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
       box-sizing: border-box;
     }
 
+    html, body {
+      height: 100%;
+      overflow-x: hidden;
+    }
+
     body {
       font-family: Arial, sans-serif;
-      background-color: #fefefe;
-      color: #111;
+      background-color: #0a0f1a;
+      color: #dde6f2;
       line-height: 1.6;
       display: flex;
       flex-direction: column;
@@ -23,7 +28,7 @@
 
     header {
       background-color: #0e1a2b;
-      color: white;
+      color: #cfd9e6;
       padding: 1rem 2rem;
       display: flex;
       justify-content: space-between;
@@ -41,7 +46,7 @@
     }
 
     nav a {
-      color: white;
+      color: #cfd9e6;
       text-decoration: none;
       font-weight: bold;
     }
@@ -54,7 +59,7 @@
       align-items: center;
       text-align: center;
       padding: 6rem 2rem;
-      min-height: 80vh;
+      height: calc(100vh - 140px);
       background-image: url('Background.webp');
       background-size: cover;
       background-position: center;
@@ -76,7 +81,7 @@
       position: relative;
       z-index: 2;
       max-width: 600px;
-      color: white;
+      color: #eaf3ff;
     }
 
     .hero h2 {
@@ -92,8 +97,8 @@
       margin-top: auto;
       text-align: center;
       padding: 1rem;
-      background-color: #f7f2eb;
-      color: #888;
+      background-color: #0e1a2b;
+      color: #99aabb;
       font-size: 0.9rem;
     }
 
@@ -125,7 +130,7 @@
 <body>
 
   <header>
-    <h1>Amirrul Mukminin</h1>
+    <h1>@miyonotmeor</h1>
     <nav>
       <a href="#">Home</a>
       <a href="#">Portfolio</a>
