--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
     html, body {
       height: 100%;
-      overflow-x: hidden;
+      overflow: hidden;
     }
 
     body {
       font-family: Arial, sans-serif;
-      background-color: #0a0f1a;
-      color: #dde6f2;
+      background-color: #fef9f2;
+      color: #1a1a1a;
       line-height: 1.6;
       display: flex;
       flex-direction: column;
@@ -27,13 +27,14 @@
     }
 
     header {
-      background-color: #0e1a2b;
-      color: #cfd9e6;
+      background-color: #fff4e6;
+      color: #1a1a1a;
       padding: 1rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
 
     header h1 {
@@ -46,42 +47,23 @@
     }
 
     nav a {
-      color: #cfd9e6;
+      color: #1a1a1a;
       text-decoration: none;
       font-weight: bold;
     }
 
     .hero {
-      position: relative;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
-      padding: 6rem 2rem;
       height: calc(100vh - 140px);
-      background-image: url('Background.webp');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-    }
-
-    .hero::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.4);
-      z-index: 1;
+      padding: 2rem;
     }
 
     .hero-text {
-      position: relative;
-      z-index: 2;
       max-width: 600px;
-      color: #eaf3ff;
     }
 
     .hero h2 {
@@ -97,8 +79,8 @@
       margin-top: auto;
       text-align: center;
       padding: 1rem;
-      background-color: #0e1a2b;
-      color: #99aabb;
+      background-color: #fff4e6;
+      color: #5c5c5c;
       font-size: 0.9rem;
     }
 
