--- a/index.html
+++ b/index.html
@@ -33,12 +33,26 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      flex-wrap: wrap;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      position: relative;
     }
 
     header h1 {
       font-size: 1.5rem;
+    }
+
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+      gap: 4px;
+    }
+
+    .menu-toggle span {
+      width: 25px;
+      height: 3px;
+      background-color: #1a1a1a;
+      border-radius: 2px;
     }
 
     nav {
@@ -50,6 +64,28 @@
       color: #1a1a1a;
       text-decoration: none;
       font-weight: bold;
+    }
+
+    @media (max-width: 768px) {
+      .menu-toggle {
+        display: flex;
+      }
+
+      nav {
+        display: none;
+        position: absolute;
+        top: 60px;
+        right: 2rem;
+        background-color: #fff4e6;
+        flex-direction: column;
+        width: 200px;
+        padding: 1rem;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      }
+
+      nav.active {
+        display: flex;
+      }
     }
 
     .hero {
@@ -83,37 +119,18 @@
       color: #5c5c5c;
       font-size: 0.9rem;
     }
-
-    @media (min-width: 768px) {
-      .hero {
-        flex-direction: row;
-        justify-content: space-around;
-        text-align: left;
-      }
-
-      .hero-text {
-        max-width: 500px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      nav {
-        flex-direction: column;
-        gap: 0.5rem;
-      }
-    }
   </style>
 </head>
 <body>
 
   <header>
     <h1>@miyonotmeor</h1>
-    <nav>
+    <div class="menu-toggle" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <nav id="nav-menu">
       <a href="#">Home</a>
       <a href="#">Portfolio</a>
       <a href="#">Services</a>
@@ -131,6 +148,13 @@
   <footer>
     Copyright © 2025 Amirrul Mukminin
   </footer>
+
+  <script>
+    function toggleMenu() {
+      const nav = document.getElementById('nav-menu');
+      nav.classList.toggle('active');
+    }
+  </script>
 
 </body>
 </html>
