--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Amirrul Mukminin | Portfolio</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&display=swap');
+
     * {
       margin: 0;
       padding: 0;
@@ -17,9 +19,9 @@
     }
 
     body {
-      font-family: Arial, sans-serif;
-      background-color: #fef9f2;
-      color: #1a1a1a;
+      font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      background-color: #f5f5f7;
+      color: #1d1d1f;
       line-height: 1.6;
       display: flex;
       flex-direction: column;
@@ -27,18 +29,19 @@
     }
 
     header {
-      background-color: #fff4e6;
-      color: #1a1a1a;
+      background-color: #ffffff;
+      color: #1d1d1f;
       padding: 1rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      box-shadow: 0 1px 3px rgba(0,0,0,0.06);
       position: relative;
     }
 
     header h1 {
-      font-size: 1.5rem;
+      font-size: 1.4rem;
+      font-weight: 600;
     }
 
     .menu-toggle {
@@ -51,19 +54,20 @@
     .menu-toggle span {
       width: 25px;
       height: 3px;
-      background-color: #1a1a1a;
+      background-color: #1d1d1f;
       border-radius: 2px;
     }
 
     nav {
       display: flex;
-      gap: 1rem;
+      gap: 1.2rem;
     }
 
     nav a {
-      color: #1a1a1a;
+      color: #1d1d1f;
       text-decoration: none;
-      font-weight: bold;
+      font-weight: 500;
+      font-size: 0.95rem;
     }
 
     @media (max-width: 768px) {
@@ -76,11 +80,11 @@
         position: absolute;
         top: 60px;
         right: 2rem;
-        background-color: #fff4e6;
+        background-color: #ffffff;
         flex-direction: column;
         width: 200px;
         padding: 1rem;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       }
 
       nav.active {
@@ -103,21 +107,23 @@
     }
 
     .hero h2 {
-      font-size: 2rem;
+      font-size: 2.2rem;
+      font-weight: 600;
       margin-bottom: 1rem;
     }
 
     .hero p {
-      font-size: 1.1rem;
+      font-size: 1.05rem;
+      color: #515154;
     }
 
     footer {
       margin-top: auto;
       text-align: center;
       padding: 1rem;
-      background-color: #fff4e6;
-      color: #5c5c5c;
-      font-size: 0.9rem;
+      background-color: #f5f5f7;
+      color: #6e6e73;
+      font-size: 0.85rem;
     }
   </style>
 </head>
