--- a/index.html
+++ b/index.html
@@ -28,6 +28,34 @@
       min-height: 100vh;
     }
 
+    #splash {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #f5f5f7;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+      animation: fadeOut 1.5s ease 1.5s forwards;
+    }
+
+    #splash img {
+      width: 100px;
+      animation: zoomIn 1.5s ease;
+    }
+
+    @keyframes zoomIn {
+      0% { transform: scale(0.5); opacity: 0; }
+      100% { transform: scale(1); opacity: 1; }
+    }
+
+    @keyframes fadeOut {
+      to { opacity: 0; visibility: hidden; }
+    }
+
     header {
       background-color: #ffffff;
       color: #1d1d1f;
@@ -128,6 +156,10 @@
   </style>
 </head>
 <body>
+
+  <div id="splash">
+    <img src="Logo.webp" alt="Splash Logo" />
+  </div>
 
   <header>
     <h1>@miyonotmeor</h1>
