--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     }
 
     #splash img {
-      width: 100px;
+      width: 30vw;
+      max-width: 200px;
+      min-width: 100px;
       animation: zoomIn 1.5s ease;
     }
 
