--- a/index.html
+++ b/index.html
@@ -179,11 +179,15 @@
   </header>
 
   <section class="hero">
-    <div class="hero-text">
-      <h2>Hi, I’m Amirrul 👋</h2>
-      <p>I’m a web developer & designer who creates responsive websites that work beautifully across all devices — phone, tablet, or desktop. Let's build something amazing together.</p>
+  <div class="hero-text">
+    <h2>Hi, I’m Amirrul,</h2>
+    <p>A web developer & designer specializing in responsive websites that work seamlessly across all devices such as phone, tablet, or desktop. This website is one of my works and serves as my portfolio in Web Design. Feel free to explore!</p>
+    <div style="margin-top: 1.5rem; display: flex; gap: 1rem; justify-content: center;">
+      <button style="padding: 0.6rem 1.5rem; border-radius: 999px; background-color: #1d1d1f; color: white; border: none; font-weight: 500; font-size: 0.95rem; cursor: pointer; box-shadow: 0 3px 8px rgba(0,0,0,0.2); transition: transform 0.2s ease;" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='none'">Yes, for sure</button>
+      <button style="padding: 0.6rem 1.5rem; border-radius: 999px; background-color: #1d1d1f; color: white; border: none; font-weight: 500; font-size: 0.95rem; cursor: pointer; box-shadow: 0 3px 8px rgba(0,0,0,0.2); transition: transform 0.2s ease;" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='none'">Nah, nevermind, I'm good</button>
     </div>
-  </section>
+  </div>
+</section>
 
   <footer>
     Copyright © 2025 Amirrul Mukminin
