--- a/index.html
+++ b/index.html
@@ -155,6 +155,17 @@
       color: #6e6e73;
       font-size: 0.85rem;
     }
+      @media (max-width: 768px) {
+      .portfolio-grid {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    @media (min-width: 769px) and (max-width: 1024px) {
+      .portfolio-grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
   </style>
 </head>
 <body>
